Added Slider And Animation

--- a/html/main.html
+++ b/html/main.html
@@ -11,6 +11,7 @@
 <nav>
     <div class="topmenu">
         <link href="../css/for_header.css" rel="stylesheet">
+        <link href="../css/for_main_page.css" rel="stylesheet">
         <li><a>Main</a></li>
         <li><a>Learn More</a></li>
         <li><a>Races</a></li>
@@ -20,7 +21,10 @@
 </nav>
 
 <body>
-    <div class="center" style="background-color: #767676; width:100%; opacity:0.5; height: 588px">
+    <div class="center" style=" width:100%; opacity:1; height: 588px">
+        <div style="padding: 125px; ">
+            <img border="solid" id="slide" width="450" height="350" src="">
+        </div>
        <script src="../js/ForMain.js"></script>
     </div>
 </body>
